--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: "CRASH: Raw Audio Score-based Generative Modeling for Controllable High-resolution Drum Sound Synthesis"
-description: "Companion website for the eponymous paper"
+description: "Simon Rouard - Gaëtan Hadjeres"
 github: [metadata]
 
 markdown: kramdown
